--- a/NODE_JS/node_farm/starter/package.json
+++ b/NODE_JS/node_farm/starter/package.json
@@ -4,8 +4,7 @@
   "description": "1st node.js project",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "Gideon",
   "license": "ISC",
@@ -13,6 +12,6 @@
     "slugify": "^1.5.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7" 
   }
 }
