--- a/NODE_JS/natours/starter/package.json
+++ b/NODE_JS/natours/starter/package.json
@@ -4,11 +4,13 @@
   "description": "Learning Node.js and mongoDB",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start:dev": "nodemon server.js",
+    "start:prod": "NODE_ENV=production nodemon server.js"
   },
   "author": "Gideon",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^9.0.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0"
   }
