--- a/NODE_JS/natours/starter/config.env
+++ b/NODE_JS/natours/starter/config.env
@@ -1,4 +1,6 @@
 NODE_ENV = development
 POST = 8000
-USERNAME = gideon.io
-PASSWORD = 1234567890
+USERNAME = nimohgideon 
+DATABASE = mongodb+srv://nimohgideon:<PASSWORD>@cluster0.qinv6.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_LOCAL = mongodb://localhost:27017/naoturs
+DATABASE_PASSWORD = Go@Mongo-21
