--- a/NODE_JS/natours/starter/package.json
+++ b/NODE_JS/natours/starter/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.7",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "slugify": "^1.5.2"
   },
   "devDependencies": {
     "eslint": "^7.26.0",
