--- a/NODE_JS/natours/starter/package.json
+++ b/NODE_JS/natours/starter/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start:dev": "nodemon server.js",
-    "start:prod": "NODE_ENV=production nodemon server.js"
+    "start:prod": "NODE_ENV=production nodemon server.js",
+    "debug": "ndb server.js"
   },
   "author": "Gideon",
   "license": "ISC",
@@ -14,7 +15,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.12.7",
     "morgan": "^1.10.0",
-    "slugify": "^1.5.2"
+    "slugify": "^1.5.2",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "eslint": "^7.26.0",
@@ -25,6 +27,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
+    "ndb": "^1.1.5",
     "prettier": "^2.2.1"
   }
 }
