--- a/NODE_JS/natours/starter/config.env
+++ b/NODE_JS/natours/starter/config.env
@@ -4,3 +4,6 @@ USERNAME = nimohgideon
 DATABASE = mongodb+srv://nimohgideon:<PASSWORD>@cluster0.qinv6.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_LOCAL = mongodb://localhost:27017/naoturs
 DATABASE_PASSWORD = Go@Mongo-21
+
+JWT_SECRET = in-my-ultimate-quest-to-becoming-a-web-developer
+JWT_EXPIRES_IN = 90d
