--- a/NODE_JS/natours/starter/config.env
+++ b/NODE_JS/natours/starter/config.env
@@ -7,3 +7,8 @@ DATABASE_PASSWORD = Go@Mongo-21
 
 JWT_SECRET = in-my-ultimate-quest-to-becoming-a-web-developer
 JWT_EXPIRES_IN = 90d
+
+EMAIL_USERNAME = 791e300804b8f6
+EMAIL_PASSWORD = 2405129dd112c5
+EMAIL_HOST = smtp.mailtrap.io
+EMAIL_PORT = 2525
