--- a/NODE_JS/natours/starter/package.json
+++ b/NODE_JS/natours/starter/package.json
@@ -12,11 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "crypto-js": "^4.0.0",
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.6.0",
     "slugify": "^1.5.2",
     "validator": "^13.6.0"
   },
