Working with PUG

--- a/NODE_JS/natours/starter/config.env
+++ b/NODE_JS/natours/starter/config.env
@@ -13,3 +13,5 @@ EMAIL_USERNAME = 791e300804b8f6
 EMAIL_PASSWORD = 2405129dd112c5
 EMAIL_HOST = smtp.mailtrap.io
 EMAIL_PORT = 2525
+
+API_PUBLISHED = https://documenter.getpostman.com/view/15687295/TzRX7jrg
