--- a/NODE_JS/natours/starter/package.json
+++ b/NODE_JS/natours/starter/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.12.7",
     "morgan": "^1.10.0",
     "nodemailer": "^6.6.0",
+    "pug": "^3.0.2",
     "slugify": "^1.5.2",
     "validator": "^13.6.0",
     "xss-clean": "^0.1.1"
