--- a/NODE_JS/natours/starter/package.json
+++ b/NODE_JS/natours/starter/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "nodemailer": "^6.6.0",
     "pug": "^3.0.2",
     "slugify": "^1.5.2",
