--- a/NODE_JS/natours/starter/package.json
+++ b/NODE_JS/natours/starter/package.json
@@ -31,6 +31,7 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.6.0",
     "pug": "^3.0.2",
+    "sharp": "^0.28.2",
     "slugify": "^1.5.2",
     "validator": "^13.6.0",
     "xss-clean": "^0.1.1"
