Advance Email sending

--- a/NODE_JS/natours/starter/config.env
+++ b/NODE_JS/natours/starter/config.env
@@ -14,4 +14,6 @@ EMAIL_PASSWORD = 2405129dd112c5
 EMAIL_HOST = smtp.mailtrap.io
 EMAIL_PORT = 2525
 
+EMAIL_FROM = hello@gideon.com
+
 API_PUBLISHED = https://documenter.getpostman.com/view/15687295/TzRX7jrg
