--- a/NODE_JS/natours/starter/package.json
+++ b/NODE_JS/natours/starter/package.json
@@ -25,6 +25,7 @@
     "express-rate-limit": "^5.2.6",
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
+    "html-to-text": "^7.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
     "morgan": "^1.10.0",
